# line-multi-agent-sample

./: .dockerignore  .env  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  REFACTORING_REPORT.md  cloud-run-service.yaml  cloudbuild.yaml  config.py  current-service.yaml  debug_prompt.py  deploy.sh  docker-compose.yml  main.py  monitor.sh  pyproject.toml  requirements.txt  run_tests.py  start.sh  test_mcp_simple.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
agents/: notion_agent.py  ocr_agent.py  translation_agent.py
docs/: adk_tutorial.ipynb  cloud_run_api_error_fix.md  extension_guide.md  function_call_flow.md  memory_management.md  project_structure.md
tests/: __init__.py  conftest.py  execute_test.py  mock_google_adk.py  prompt_manager_test.py  simulate_line_request.py  test.py  test_agent.py  test_agents.py  test_agents_agent_factory.py  test_agents_prompt_manager.py  test_agents_root_agent.py  test_config.py  test_e2e.py  test_extraction_tool.py  test_integration.py  test_main.py  test_mcp_integration.py  test_practical_mcp.py  test_prompt_content.py  test_server.py  test_services_agent_service_impl.py  test_services_line_service_client.py  test_services_line_service_constants.py  test_services_line_service_handler.py  test_summary.md  test_tools_calculator_tools.py  test_tools_calculator_tools_coverage.py  test_tools_filesystem.py  test_tools_filesystem_mock.py  test_tools_filesystem_simple.py  test_tools_mcp_integration.py  test_tools_web_tools.py  test_utils_logger.py  (+4 more)
(+111 files in other folders)
