[project]
name = "line-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiolinebot>=0.4.1",
    "beautifulsoup4==4.13.4",
    "fastapi>=0.115.12",
    "google-adk>=0.5.0",
    "line-bot-sdk>=3.17.1",
    "litellm>=1.69.2",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
